[project]
name = "langfuse-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.20",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langfuse>=3.11.1",
    "openai>=2.14.0",
    "openlit>=1.26.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
